# dicetrack-3D

./: .gitignore  README.md  build-wasm.bat
dice/: dice.data  dice.js  index.html
dicetrack/: dicetrack.data  dicetrack.js  dicetrack.wasm  index.html
examples/: CMakeLists.txt
examples/dice/: CMakeLists.txt  dices.cpp  dices.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/dice/assets/: dice.frag  dice.vert
examples/dicetrack/: CMakeLists.txt  dices.cpp  dices.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/dicetrack/assets/: depth.frag  depth.vert  dice.mtl  texture.frag
examples/dicetrack/assets/shaders/: texture.frag
public/: full_window_console.html  helloworld.html  index.html
