# add_subdirectory(helloworld)
# add_subdirectory(firstapp)
# add_subdirectory(sierpinski)
# add_subdirectory(coloredtriangles)
# add_subdirectory(regularpolygons)
# add_subdirectory(tictactoe)
# add_subdirectory(dice)
# add_subdirectory(lookat)
# add_subdirectory(viewer1)
# add_subdirectory(viewer2)
# add_subdirectory(viewer3)
# add_subdirectory(viewer4)
add_subdirectory(dicetrack)